# sono

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  sono.py  test_sono.py
examples/: chord_progression.py
sono/: __init__.py  elements.py  music.py  sequencer.py  util.py
src/sono/: __init__.py  elements.py  filters.py  io_elements.py  modulation.py  music.py  oscillators.py  protocol.py  sequencer.py  util.py
tests/: test_elements.py  test_filters.py  test_io_elements.py  test_modulation.py  test_music.py  test_oscillators.py  test_package_exports.py  test_protocol.py  test_sequencer.py
tests/fixtures/: __init__.py
